fixed links and spacing

--- a/hw/portfolio/about/css/desktop.css
+++ b/hw/portfolio/about/css/desktop.css
@@ -73,10 +73,19 @@ main{
   padding: 10px 0px 30px 0px;
 }
 
-footer img {
+footer a{
   width: 40px;
   height: 40px;
-  padding: 10px 0px 0px 0px;
+  padding: 20px 0px 10px 0px;
+  text-decoration: none;
+
+}
+
+footer a img {
+  width: 40px;
+  height: 40px;
+  padding: 20px 0px 10px 0px;
+
 }
 
 .currentpage{
