--- a/hw/portfolio/contact/css/desktop.css
+++ b/hw/portfolio/contact/css/desktop.css
@@ -89,7 +89,6 @@ nav ul li:hover{
   color: black;
 }
 
-/* how the hell do i get my google map to show up instead of a screenshot? */
 #map {
   height: 400px;
 }
@@ -99,12 +98,20 @@ nav ul li:hover{
   padding: 10px 0px 30px 0px;
 }
 
-footer img {
+footer a{
   width: 40px;
   height: 40px;
-  padding: 10px 0px 0px 0px;
+  padding: 20px 0px 10px 0px;
+  text-decoration: none;
+
 }
 
+footer a img {
+  width: 40px;
+  height: 40px;
+  padding: 20px 0px 10px 0px;
+
+}
 
 h1{
   font-family: 'Monoton', cursive;
