--- a/hw/portfolio/work/css/desktop.css
+++ b/hw/portfolio/work/css/desktop.css
@@ -38,9 +38,9 @@ nav ul li:hover{
   margin: 0px 50px 0px 50px;
 }
 
-/* why will nothing center on the page??? */
 #microsoft{
   align: center;
+  padding-top: 30px;
 }
 
 h3{
@@ -50,7 +50,7 @@ h3{
 
 #grid1{
   display: grid;
-  padding: 0px 0px 30px 60px;
+  padding: 20px 0px 30px 60px;
   grid-template-rows: auto;
   grid-template-columns: 360px 360px;
   grid-column-gap: 25px;
@@ -60,6 +60,13 @@ h3{
 #grid1 p{
   align-items: center;
   padding-bottom: 10px;
+  margin-top: -40px;
+}
+
+#grid1 h2{
+  align-items: center;
+  padding-bottom: 10px;
+  margin-top: 0px;
 }
 
 #grid1 img{
@@ -93,14 +100,12 @@ h3{
   float: left;
   margin: 0;
   padding: 0;
-  width: 600px;
-  height: 780px;
+  width: 610px;
+  height: 790px;
   background: #ccc;
   text-align: center;
   line-height: 300px;
 }
-
-/* Change color here */
 
 a.control_prev, a.control_next {
   position: absolute;
@@ -110,8 +115,8 @@ a.control_prev, a.control_next {
   padding: 4% 3%;
   width: auto;
   height: auto;
-  background: #2a2a2a;
-  color: #fff;
+  background: #3D9BE9;
+  color: #ffffff;
   text-decoration: none;
   font-weight: 600;
   font-size: 18px;
@@ -128,19 +133,25 @@ a.control_next {
   border-radius: 2px 0 0 2px;
 }
 
-
-
 #footer{
   border-width: 1px 0px 0px 0px; border-color: black; border-style: solid;
   padding: 10px 0px 30px 0px;
 }
 
-footer img {
+footer a{
   width: 40px;
   height: 40px;
-  padding: 10px 0px 0px 0px;
+  padding: 20px 0px 10px 0px;
+  text-decoration: none;
+
 }
 
+footer a img {
+  width: 40px;
+  height: 40px;
+  padding: 20px 0px 10px 0px;
+
+}
 
 h1{
   font-family: 'Monoton', cursive;
